--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
             <artifactId>jsp-api</artifactId>
             <version>6.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>myseckill</finalName>
